--- a/client/src/GlobalStyles.css
+++ b/client/src/GlobalStyles.css
@@ -5,12 +5,15 @@
     font-family: "Cormorant Garamond", serif;
     margin: 0;
     padding: 0;
+    --bg-color: #2b3c59;
+    --pink-red: #ea6069;
 }
 
 @media (prefers-color-scheme: dark) {
-    * {
-        background-color: #1a1a1a;
-        color: white;
+    body {
+        /* background-color: var(--bg-color);
+        color: white; */
+        background-color: rgb(214, 214, 214);
     }
 }
 
@@ -22,7 +25,13 @@ a {
 .main-container {
     display: flex;
     flex-direction: column;
-    margin-top: 55px;
-    width: 100%;
+    margin: 4.25rem auto 0 auto;
     min-height: 100vh;
+    overflow: hidden;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+.card {
+    border-radius: 0.5rem;
 }
