--- a/client/src/components/Navbar/navstyles.module.css
+++ b/client/src/components/Navbar/navstyles.module.css
@@ -1,29 +1,51 @@
 .navbar {
     position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(123, 123, 123, 0.5);
-    background-position: fixed;
-    background-size: cover;
-    opacity: 0.8;
+    top: 0.75rem;
+    left: 0.75rem;
+    right: 0.75rem;
+    background-color: white;
+    opacity: 1;
     backdrop-filter: blur(5px);
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0 2rem;
+    padding: 0 1rem;
+    transition: all 0.5s ease-in-out;
+    border-radius: 0.5rem;
+    user-select: none;
+}
+
+.navbar_hide {
+    opacity: 0;
+}
+
+.right {
+    margin: 0 0 0 auto;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
 }
 
 .navbar ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    margin: 0 0 0 auto;
+    margin-left: 1rem;
+    align-items: stretch;
+    /* justify-content: center; */
+    background-color: white;
 }
 
 .navbar ul li {
     padding: 1rem;
+    height: 100%;
+    text-align: center;
+    justify-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .navbar ul li:hover {
-    background-color: yellow;
+    background-color: var(--bg-color);
+    color: white;
 }
