--- a/client/src/components/RenderPrayer/RenderPrayer.module.css
+++ b/client/src/components/RenderPrayer/RenderPrayer.module.css
@@ -1,10 +1,32 @@
 .card {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    background-color: white;
+    padding: 0;
+    overflow: hidden;
+    margin-bottom: 0.75rem;
 }
 
 .vis_detail {
     display: flex;
     flex-direction: row;
     gap: 40px;
+}
+
+.cardImage {
+    width: 100%;
+    height: auto;
+    max-height: 75vh;
+    object-fit: cover;
+    flex: 1;
+}
+
+.cardMain {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cardTextDetail {
+    flex: 1;
+    padding: 10rem;
 }
