--- a/client/src/GlobalStyles.css
+++ b/client/src/GlobalStyles.css
@@ -71,3 +71,10 @@ a {
 .bgNavy {
     background: var(--navy);
 }
+
+.prayerContainer {
+    margin: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 56px;
+}
